--- a/BtkAkademiMVC/Views/Shared/_Layout.cshtml
+++ b/BtkAkademiMVC/Views/Shared/_Layout.cshtml
@@ -28,6 +28,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Movie" asp-action="Index">Filmler</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Book" asp-action="Index">Kitaplar</a>
+                        </li>
                     </ul>
                 </div>
             </div>
